--- a/spring-eureka-client-school-service/pom.xml
+++ b/spring-eureka-client-school-service/pom.xml
@@ -43,6 +43,14 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.google.cloud/google-cloud-texttospeech-bom -->
+		<dependency>
+			<groupId>com.google.cloud</groupId>
+			<artifactId>google-cloud-texttospeech-bom</artifactId>
+			<version>1.2.3</version>
+			<type>pom</type>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
