--- a/spring-eureka-client-service-main/pom.xml
+++ b/spring-eureka-client-service-main/pom.xml
@@ -57,6 +57,15 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.google.cloud/google-cloud-texttospeech-bom -->
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-texttospeech-bom</artifactId>
+            <version>1.2.3</version>
+            <type>pom</type>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
