--- a/spring-eureka-server/pom.xml
+++ b/spring-eureka-server/pom.xml
@@ -42,6 +42,15 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.google.cloud/google-cloud-texttospeech-bom -->
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-texttospeech-bom</artifactId>
+            <version>1.2.3</version>
+            <type>pom</type>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
