--- a/spring-eureka-client-school-service/pom.xml
+++ b/spring-eureka-client-school-service/pom.xml
@@ -51,6 +51,14 @@
 			<type>pom</type>
 		</dependency>
 
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.16</version>
+			<scope>provided</scope>
+		</dependency>
+
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
